--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Agency</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="/script.js"></script>
+  </body>
 </html>
