nav var section start

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav id="nav">
+      <h1>LAZAREV.</h1>
+      <div class="nav-part-2">
+        <h4>Case Studies</h4>
+        <h4>Areas of experties</h4>
+        <h4>UIUX Design</h4>
+        <h4>PRoduct design</h4>
+        <h4>Design Process</h4>
+        <h4>About Agency</h4>
+      </div>
+      <button>Let's Talk</button>
+    </nav>
     <div id="main">
       <div id="page1">
         <h1>
