--- a/index.html
+++ b/index.html
@@ -10,12 +10,85 @@
     <nav id="nav">
       <h1>LAZAREV.</h1>
       <div class="nav-part-2">
-        <h4>Case Studies</h4>
-        <h4>Areas of experties</h4>
-        <h4>UIUX Design</h4>
-        <h4>PRoduct design</h4>
-        <h4>Design Process</h4>
-        <h4>About Agency</h4>
+        <div class="nav-elem">
+          <h4>Case Studies</h4>
+          <h5>
+            <span> Case Studies </span>
+          </h5>
+        </div>
+        <div class="nav-elem">
+          <h4>Areas of experties</h4>
+          <h5>
+            <span> AI & ML </span>
+          </h5>
+          <h5>
+            <span> Fintech </span>
+          </h5>
+          <h5>
+            <span> Real Estate </span>
+          </h5>
+          <h5>
+            <span>E-Commerce</span>
+          </h5>
+          <h5>
+            <span>Web 3</span>
+          </h5>
+        </div>
+        <div class="nav-elem">
+          <h4>UIUX Design</h4>
+          <h5>
+            <span> Fintech </span>
+          </h5>
+          <h5>
+            <span> Real Estate </span>
+          </h5>
+          <h5>
+            <span>E-Commerce</span>
+          </h5>
+          <h5>
+            <span>Web 3</span>
+          </h5>
+        </div>
+        <div class="nav-elem">
+          <h4>PRoduct design</h4>
+          <h5>
+            <span> Fintech </span>
+          </h5>
+          <h5>
+            <span>Web 3</span>
+          </h5>
+        </div>
+        <div class="nav-elem">
+          <h4>Design Process</h4>
+          <h5>
+            <span> Fintech </span>
+          </h5>
+          <h5>
+            <span> Real Estate </span>
+          </h5>
+          <h5>
+            <span>E-Commerce</span>
+          </h5>
+          <h5>
+            <span>Web 3</span>
+          </h5>
+        </div>
+        <div class="nav-elem">
+          <h4>About Agency</h4>
+          <h5>
+            <span> Fintech </span>
+          </h5>
+          <h5>
+            <span> Real Estate </span>
+          </h5>
+          <h5>
+            <span>E-Commerce</span>
+          </h5>
+          <h5></h5>
+          <h5>
+            <span>Web 3</span>
+          </h5>
+        </div>
       </div>
       <button>
         Let's Talk
