--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </svg>
       </button>
       <div id="nav-bottom">
-        <div class="bottom-div">
+        <!-- <div class="bottom-div">
           <h5><span>Case Studies</span></h5>
         </div>
         <div class="bottom-div">
@@ -131,7 +131,7 @@
           <h5><span>RealEstate</span></h5>
           <h5><span>E-commerce</span></h5>
           <h5><span>Web3</span></h5>
-        </div>
+        </div> -->
       </div>
     </nav>
     <div id="main">
